src/test/ui/hrtb/hrtb-identity-fn-borrows.ast.stderr
error[E0506]: cannot assign to `x` because it is borrowed
  --> $DIR/hrtb-identity-fn-borrows.rs:27:5
   |
LL |     let y = f.call(&x);
   |                     - borrow of `x` occurs here
LL |     x = 5; //[ast]~ ERROR cannot assign
   |     ^^^^^ assignment to borrowed `x` occurs here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0506`.
